virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: application-vs        # this needs to be a unique name for Istio
spec:
  hosts:
    - "*"
  gateways:
    - application-gateway             # This should tie in with the name in ingress.yaml
  http:
    - match:
        - uri:
            prefix: /api              # prefix for the application
#      rewrite:                       # rewrite example, if required
#        uri: "/"
      route:
        - destination:
            host: application-service # service name which will tie in with service.yaml
            port:
              number: 12881
